# proactive_hcdt

./: .gitignore  README.md  pyproject.toml
proactive_hcdt/: __init__.py
proactive_hcdt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
proactive_hcdt/ai_providers/: __init__.py  anthropic_provider.py  base.py  dummy.py  gemini.py  openai_provider.py
proactive_hcdt/config/: __init__.py  settings.py
proactive_hcdt/core/: __init__.py  controller.py  tool_registry.py
proactive_hcdt/robot_interface/: __init__.py  base.py  dummy.py
proactive_hcdt/simulation/: __init__.py  agents.py  ai_actions.py  diffusion_policy_state_pusht_demo.ipynb  physics.py  pymunk_renderer.py  renderer.py  shapes.py  world.py
proactive_hcdt/tools/: __init__.py  base.py  examples.py
tests/: __init__.py  test_ai_primitives.py  test_ai_providers.py  test_config.py  test_core.py  test_robot_interface.py  test_simulation_phase1.py  test_simulation_pymunk.py  test_tools.py
