[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-hcdt"
version = "0.1.0"
description = "Proactive AI-Controlled Robotic Assistance Framework for Human-Robot Interaction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Proactive HCDT Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
keywords = ["robotics", "ai", "human-robot-interaction", "gemini", "claude", "openai"]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.3.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.8.0"]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/usmanasad88/proactive_hcdt"
"Bug Tracker" = "https://github.com/usmanasad88/proactive_hcdt/issues"

[tool.setuptools.packages.find]
include = ["proactive_hcdt*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
